# TextEditor

./: CMakeLists.txt  README.md  TextBuffer.cpp  TextBuffer.h  cursor.cpp  cursor.h  editorUI.cpp  editorUI.h  fileDialog.h  fileDialog.mm  history.cpp  history.h  main.cpp
